deploy/retrieveUnpackaged/objects/SFDC_Enrollment__c.object
<CustomObject>
    <description>Connector object that associates a Student to a Class.</description>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval is required to attend this event.</description>
        <inlineHelpText>Approval is required to attend this event.</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001oUivEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>SFDC_Class__c</referenceTo>
        <relationshipLabel>Class Enrollment</relationshipLabel>
        <relationshipName>R00N50000001NBxuEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Mailtrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC/BDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MailTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Final_Exam__c</fullName>
        <label>Sales Final Exam</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Final_Percentage__c</fullName>
        <formula>Sales_Final_Exam__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Final Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Overall_Percentage__c</fullName>
        <formula>(X21111_Percentage__c + X21121_Percentage__c + X21131_Percentage__c + 
X21141_Percentage__c +  X21151_Percentage__c +  X21161_Percentage__c) / 006</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Overall Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Final_Exam__c</fullName>
        <label>Support Final Exam</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Final_Percentage__c</fullName>
        <formula>Support_Final_Exam__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Final Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Support_Overall_Percentage__c</fullName>
        <formula>(X23111_Percentage__c + X23121_Percentage__c + X23131_Percentage__c + X23141_Percentage__c + X23151_Percentage__c + X23161_Percentage__c + X23171_Percentage__c + X23181_Percentage__c + X23191_Percentage__c) / 009</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Overall Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X21111_Login_Home_Page__c</fullName>
        <label>21111: Login &amp; Home Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21111_Percentage__c</fullName>
        <formula>X21111_Login_Home_Page__c  / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>21111 Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X21121_Leads__c</fullName>
        <label>21121: Leads</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21121_Percentage__c</fullName>
        <formula>X21121_Leads__c / 11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>21121 Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X21131_Account_Contacts__c</fullName>
        <label>21131: Account &amp; Contacts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21131_Percentage__c</fullName>
        <formula>X21131_Account_Contacts__c / 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>21131 Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X21141_Opportunities__c</fullName>
        <label>21141: Opportunities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21151_Reports_Dashboards__c</fullName>
        <label>21151: Reports &amp; Dashboards</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21161_Forecasting__c</fullName>
        <label>21161: Forecasting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23111_Login_Home_page__c</fullName>
        <label>23111: Login &amp; Home page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23121_Accounts__c</fullName>
        <label>23121: Accounts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23131_Contacts__c</fullName>
        <label>23131: Contacts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23141_Opportunities__c</fullName>
        <label>23141: Opportunities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23151_Forecasting__c</fullName>
        <label>23151: Forecasting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23161_Standard_Customer_Calls__c</fullName>
        <label>23161: Standard Customer Calls</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23171_Server_Build__c</fullName>
        <label>23171: Server Build</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23181_Technical_Overview__c</fullName>
        <label>23181: Technical Overview</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23191_Reporting_Dashboards_Console__c</fullName>
        <label>23191: Reporting, Dashboards &amp; Console</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Class Enrollment</label>
    <listViews>
        <fullName>AllCompletedEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Enrollments</label>
        <sharedTo>
            <group>All Internal Users Public Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Enrollments</label>
        <sharedTo>
            <group>All Internal Users Public Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllEnrollments_d_2</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <filterScope>Mine</filterScope>
        <label>- All Enrollments</label>
        <sharedTo>
            <group>All Partner Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>All Open Enrollments</label>
        <sharedTo>
            <group>All Internal Users Public Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>- Completed Enrollments</label>
        <sharedTo>
            <group>All Partner Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OpenEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Registered,Canceled</value>
        </filters>
        <label>- Open Enrollments</label>
        <sharedTo>
            <group>All Partner Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>E-{YYYY}{MM}-{0000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Enrollment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>